--- a/work.html
+++ b/work.html
@@ -161,7 +161,7 @@ process to enhance protein conformational sampling" for PeerJ Journal.
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<h2>Analyze Johns Hopkins University data using unsupervised models</h2>
-									Analyzed Johns Hopkins University data using using K-means, Hierarchical classification and Principal component analysis (PCA). <br>
+									Analyzed Johns Hopkins University data using K-means, Hierarchical classification and Principal component analysis (PCA). <br>
 									In this project, I learned the importance of data quality which really describes reality to get good and meaningful results.<br>
        <strong>Technologies: Pandas, NumPy, Matplotlib, Scikit-Learn and Python.</strong>
 									<!--<p class="read"><a href="#">View Details</a></p>-->
